Fixed body scrolling on iOS

--- a/web/include/style/development.css
+++ b/web/include/style/development.css
@@ -123,7 +123,7 @@ strong, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     /* Positionering */
     position: relative;
     top: 0;
-    z-index: 3;
+    z-index: 30;
     width: 100%;
     min-width: 20em; }
     .rh-menu-dropdown__header {
@@ -313,5 +313,6 @@ strong, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   
   .rh-noscroll {
     overflow: hidden;
-    -webkit-overflow-scrolling: auto; }
+    -webkit-overflow-scrolling: auto;
+    height: 100% !important; }
   
